--- a/css/estilos.css
+++ b/css/estilos.css
@@ -324,16 +324,29 @@ ICON - Redes sociales
 -----------------------------------------*/
 
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100vh;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
 main {
     width: 100%;
     display: flex;
-    align-items: center;s
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;    
 }
 
 .icon {
-    position: center;
+    position: relative;
     width: 80px;
     height: 80px;
     margin: 20px;
@@ -367,7 +380,7 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    tra nnsform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
     font-size: 1.7rem;
 }
 
